# agent-demo

./: .env.example  README.md  pyproject.toml
app/: gradio_ui.py  lifespan.py  main.py
app/agents/: basic_agent.py
app/api/: query_routes.py
app/api/v1/: agent.py
app/core/: config.py  deps.py  llm_loader.py
app/schemas/: agent.py  chat_schema.py
app/services/: agent_service.py
app/tools/: __init__.py  demo_tools.py
tests/: test_agent.py
