[project]
name = "agent-demo"
version = "0.1.0"
description = "A minimal, modern FastAPI agent demo with LangChain and Ollama."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "fastapi-cli>=0.0.11",
    "langchain-core>=0.3.76",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "loguru>=0.7.3",
    "ollama>=0.5.3",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]
